# unity_code_native

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  add_format_field.py  debug_function_structure.rs  debug_var_test.rs  example_occurrence_ranges.rs  test_chained_debug.rs  test_diagnostics.uss  test_enhanced_validation.uss  test_normalize_method_name.rs  test_url_tree.uss  test_variable_diagnostics.uss
.trae/rules/: project_rules.md
Assets/UI/: MainWindow.uxml
Assets/data/: Mozilla_CSS_properties_2025.md  USS_property_format_6.0.md  Unity - Manual_ USS color keywords_6.0_clean.html  properties.txt
UnityProject/: .gitignore  README.md
UnityProject/Assets/Scripts/: Example1.cs  Example2.cs  Example3.cs  Example4.cs  Inherit1.cs  Inherit2.cs  PartialTest1.cs  PartialTest2.cs  Test.cs  TestComplexNamespace.cs
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/UI/Components/: button.uss
UnityProject/ProjectSettings/: ProjectSettings.asset
docs/: CSDocs.md  HotReloadForUnity.md  MessagingProtocol.md  MetaFile.md  PropertiesSourceData.md  ServerUsage.md  TODO.md  TSSSupport.md  USSAutoCompletion.md  USSFormatter.md  USSHover.md  USSLanguageServer.md  USSLanguageSpec.md  USSParserTreeStructure.md  UnityAssetDatabase.md  UnityDetection.md  UnityProject.md  UrlCompletion.md  UxmlScheme.md
examples/: complete.uss  comprehensive_test.uss  css_at_rule.uss  example.css  formatting_test.uss  import_complete.uss  invalid_string.uss  missing_semicolon.uss  properties.html  pseudo_class.uss  sample.uss  sample_dump.txt  test_client.rs  test_formatting.uss  transition.uss  tree_dumper.rs  unity_asset_database_demo.rs  url.uss
scripts/: update_formats.py
src/: dir_changed.rs  lib.rs  logging.rs  main.rs  monitor.rs  server.rs  test_utils.rs  unity_asset_database.rs  unity_asset_database_tests.rs  unity_project_manager.rs  uxml_schema_manager.rs  uxml_schema_manager_tests.rs
src/cs/: assembly_finder.rs  assembly_manager.rs  compile_utils.rs  compile_utils_tests.rs  constants.rs  docs_compiler.rs  docs_compiler_tests.rs  docs_manager.rs  docs_manager_tests.rs  error.rs  manager.rs  mod.rs  package_manager.rs  source_assembly.rs  source_finder.rs  source_utils.rs  xml_doc_utils.rs
src/language/: asset_string.rs  asset_url.rs  document.rs  mod.rs  tree_printer.rs  tree_utils.rs  url_completion.rs  url_completion_tests.rs
src/uss/: asset_integration_tests.rs  asset_string_validation.rs  color.rs  color_keywords.rs  color_provider.rs  completion.rs  completion_tests.rs  completion_tests_declaration.rs  constants.rs  definitions.rs  definitions_tests.rs  diagnostics.rs  diagnostics_tests.rs  document.rs  document_manager.rs  document_tests.rs  flexible_format.rs  flexible_format_tests.rs  formatter.rs  formatter_tests.rs  function_data.rs  function_node.rs  function_node_tests.rs  highlighting.rs  hover.rs  hover_pseudo_class_test.rs  hover_tests.rs  import_node.rs  import_node_tests.rs  keyword_data.rs  mod.rs  parser.rs  property_data.rs  pseudo_class_data.rs  refactor.rs  refactor_rename_tests.rs  refactor_tests.rs  server.rs  tree_printer.rs  unit_data.rs  (+9 more)
(+3 files in other folders)
