[package]
name = "unity_code_native"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unity_code_native"
path = "src/main.rs"

[dependencies]
sysinfo = "0.29"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["macros", "rt", "net", "io-util", "io-std", "time", "fs"] }
tower-lsp = "0.20"
tree-sitter = "0.20"
tree-sitter-css = "0.20"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
url = "2.5"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.0"

# development release build for fast builds during iterative development
[profile.release-fast]
inherits = "release"
opt-level = 1
incremental = true
debug = false
lto = false

# release build
[profile.release]
opt-level = 3
incremental = false
debug = false
lto = false
