[package]
name = "unity_code_native"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unity_code_native"
path = "src/main.rs"

[dependencies]
sysinfo = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.46", features = ["macros", "rt", "net", "io-util", "io-std", "time", "fs"] }
tower-lsp = "0.20"
tree-sitter = "0.25"
tree-sitter-css = "0.23"
tree-sitter-c-sharp = "0.23"
malva = "0.13.1"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
thiserror = "2.0"
url = "2.5"
urlencoding = "2.1.3"
quick-xml = "0.38"
notify = "8.1"
regex = "1.11"


[dev-dependencies]
tempfile = "3.20"
scraper = "0.23"

[[example]]
name = "tree_dumper"
path = "examples/tree_dumper.rs"

# development release build for fast builds during iterative development
[profile.release-fast]
inherits = "release"
opt-level = 1
incremental = true
debug = false
lto = false

# release build
[profile.release]
opt-level = 3
incremental = false
debug = false
lto = false
